fix:actionbar if only 1 overflow option display in always visible options

--- a/Frontend/src/app/common/ui/actionbar/actionbar.component.scss
+++ b/Frontend/src/app/common/ui/actionbar/actionbar.component.scss
@@ -44,14 +44,6 @@
 .more i{
   font-size:1.5rem;
 }
-.drawButtonMore{
-  position:relative;
-  top:-4px;
-  left:10px;
-}
-.drawButtonMore a{
-  color:#fff;
-}
 .actionAlways{
   text-transform: uppercase;
 }
